--- a/css/all.css
+++ b/css/all.css
@@ -7,6 +7,7 @@
   --index: calc(1vw + 1vh);
   --color-main: #f4efec;
   --color-text: #cdc6c3;
+  --gallery-gap: calc(var(--index) * 10);
 }
 @font-face {
   font-family: raleway-c;
@@ -16,8 +17,81 @@
   font-family: outfit-c;
   src: url(../fonts/outfit-regular.woff2);
 }
+h1,
+h2 h3,
+h5,
+h6 {
+  font-family: outfit-c;
+}
+/*  will change */
+.content,
+.hero,
+.main-header,
+.gallery > * {
+  will-change: transform;
+}
+
 body {
   background-color: #161617;
   color: #fafafa;
   font-family: raleway-c;
+  overflow-x: hidden;
+}
+.hero {
+  width: calc(var(--index) * 36);
+  position: absolute;
+  top: 8vh;
+  left: 37vw;
+}
+.main-header {
+  height: 100vh;
+}
+.container {
+  padding: 0 7vw;
+}
+.main-title {
+  font-size: calc(var(--index) * 8);
+  position: absolute;
+  width: min-content;
+  bottom: 12vh;
+  line-height: 0.9;
+}
+.gallery {
+  display: flex;
+}
+.gallery {
+  display: flex;
+  padding: calc(var(--index) * 8) 0;
+}
+.gallery > * {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.gallery__item {
+  max-width: calc(var(--index) * 21);
+  margin-bottom: var(--gallery-gap);
+  max-height: 180vh;
+  border-radius: 8px;
+}
+.gallery-left {
+  margin-top: calc(var(--gallery-gap) * 1.75);
+}
+.gallery-right .gallery__item {
+  margin: 0;
+  margin-top: var(--gallery-gap);
+}
+.text-block {
+  color: var(--color-text);
+  position: relative;
+}
+.text-block__h {
+  font-size: 2rem;
+  line-height: 2.4rem;
+  color: var(--color-main);
+  margin-bottom: 1.5rem;
+}
+.text-block__p {
+  line-height: 1.75;
 }
